# ccglib-playground

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
kernels/: kernel_complex_interleaved.cu  kernel_transpose.cu  kernel_transpose_complex.cu
python/: tune_complex_interleaved.py  tune_transpose.py
src/: complex_interleaved.cpp  transpose_complex.cpp
